--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "perf_chains"]
     path = perf_chains
-    url = git@github.com:PeterDing372/candidate_perf_chains.git
+    url = https://github.com/PeterDing372/candidate_perf_chains.git
+[submodule "candidate_perf_chains"]
+	path = candidate_perf_chains
+	url = https://github.com/PeterDing372/candidate_perf_chains.git
